--- a/A_Pumpkins_Delirium.html
+++ b/A_Pumpkins_Delirium.html
@@ -1,1 +1,255 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>A Pumpkin's Delirium (@inkyfawn)</title>
+    <link rel="stylesheet" href="dahliaReset.css" type="text/css">
+    <link rel="stylesheet" href="dahlia.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Junge|Raleway|Handlee" rel="stylesheet">
+  </head>
+  <body>
+    <!-- Menu -->
+    <div class="menu" id="top">
+      <nav>
+        <ul>
+          <span>@inkyfawn</span>
+          <a href="index.html"><span>Home</span></a>
+          <a href="generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
+          <a href="videos.html"><span>Videos</span></a>
+          <a href="aboutMe.html"><span>About Me</span></a>
+        </ul>
+      </nav>
+    </div>
+    <div class="smallerMenu" id="smallerTop">
+      <nav>
+        <ul>
+          <span id="nightDahliaSym">@inkyfawn</span>
+        </ul>
+        <br>
+        <ul>
+          <a href="index.html"><span>Home</span></a>
+          <a href="generalWriting.html"><span>Nonsensical Tidbits of Gibberish</span></a>
+        </ul>
+        <ul>
+          <a href="videos.html"><span>Videos</span></a>
+          <a href="aboutMe.html"><span>About Me</span></a>
+        </ul>
+      </nav>
+    </div>
+    <!-- Story -->
+    <div class="containerStory">
+      <div class="quote mainstory">
+        <div>
+          &#x1F383;
+        </div>
+        <span class="mainstoryTitle">A Pumpkin's Delirium</span>
+        <p>
+           The orange pumpkin laughed degradingly at himself.<br><br> 
 
+           It was early evening on Halloween night, and he sat all alone on a brick doorstep, 
+           watching the clouds roll by with their hues of ominous gray. The wind was chilly, 
+           and he shivered at the thought of the horrible wrong that’d been done to him. The 
+           knowledge was painful, but the experience had been far worse. And he had scars to prove it.<br><br>
+
+           “Bah humbug,” he said. His words were crisp on the frigid air.<br><br>
+
+           He liked how it sounded—talking out loud to himself. He continued on.<br><br>
+
+           “. . . She abducted me from my family . . .”<br><br>
+
+           He thought of his patch and all the pumpkins there: his family. They started out as 
+           seedlings in the dirt, and he grew up next to Tom, his best friend. They did everything 
+           together—counting crows flying by in the sky, watching leaves fall, and spending time in 
+           the company of all their brothers and sisters. But now it was all over. And sadness enveloped him.<br><br>
+
+           Flashes of a cruel beast bombarded his mind: a little girl, her hands on his stem, the 
+           searing pain as she ripped him from his vine . . . and the sound of her carefree voice as 
+           she suggested turning him into a pie.<br><br>
+
+           Oh my, OH MY!<br><br>
+
+           Reliving this nightmare was too much! He hyperventilated in the cool air, but even its chill 
+           wasn’t enough to restrain the excited delirium growing inside him. His head felt hot, and it 
+           wasn’t because of the lighted candle inside him.<br>
+           Madness took over, and from that point on he was a simple lunatic.<br><br>
+
+           Laughter poured from his poorly cut mouth. And his voice dripped with perverted insanity. 
+           “She carved my face . . . she mutilated by body . . . she took my guts out . . .”<br><br>
+
+           A nearby chipmunk preparing for her evening meal dropped her hickory nut in shock. What a 
+           creepy pumpkin, she thought. She surveyed him warily: equilateral eyes, a triangular nose, 
+           and a sexily lacerated mouth. Nut-almighty! The pumpkin was hot and not just because of the 
+           candlelight burning within him!<br><br>
+
+           The boisterous pumpkin laughed some more. He reveled in his masochistic ways.<br>
+           Giggling, chortling, and raving about the pain a little girl had inflicted upon him.<br><br>
+
+           Soon children came to trick-or-treat dressed as goblins, fairies, crayons, and little devils. 
+           As each little kid walked up to the doorstep, the pumpkin whispered words of madness.<br><br>
+
+           “. . . fate of the vine . . .” he told the princess.<br>
+           His breath on the wind sounded like a ghost, and the little girl shivered with fear.<br><br>
+
+           Next came a zebra, to whom he said, “ . . . pie maketh me not . . .”<br>
+           The little kid’s stomach grumbled with hunger, so she reached into her bag and ate a Twizzlers candy.<br><br>
+
+           When the warlock came, he took special notice of the orange pumpkin. The little boy picked up the 
+           pumpkin with both hands and smiled evilly. Inspired by video games, he decided to destroy the pumpkin 
+           and see what magic lay therein.<br><br>
+
+           That insane orange pumpkin had no warning.<br>
+           Nor did the ogling squirrel who’d been watching the pumpkin from her perch in the hickory tree.<br><br>
+
+           Down . . . down the pumpkin went, propelled by the warlock’s hands and pulled down by gravity.<br><br>
+
+           CRACK!<br><br>
+
+           Orange was everywhere.<br><br>
+          
+           Hunks . . . chunks . . . of pumpkin carcass lay on the porch.<br><br>
+
+           The warlock had murdered the orange pumpkin.<br><br>
+
+           Like Humpty Dumpty, the pumpkin could not be put back together again. The squirrel from the tree 
+           looked on in horror, her heart momentarily broken. But after 3.5 seconds, she decided there were 
+           plenty of nuts in the world, and it would be easy to fantasize over a new one in the area. Go figure!<br><br>
+
+           Thus ends the story of an insane orange pumpkin and a squirrel’s perverted lust.
+         </p>
+       </div>
+     </div>
+
+     <p class="scroll">Read my other stories down below! :)</p>
+     <div class="links">
+       <div class="story" id="strangeAttraction">
+        <a href="Strange_Attraction.html"><span>Strange Attraction</span></a><br>
+        <p>Thunder grumbled in the distance, its angry echoes reverberating over the
+        mountaintop and into the nearby valley. The forest below awoke from its
+        slumber at the sound. A shiver rolled through the trees, sending silent
+        whispers with the wind as leaves rustled about. It was 8:30 PM, and the
+        night was darker than usual. Much darker. Blackness cloaked everything,
+        pervaded everything, was everything. The moon was nowhere to be seen,
+        its luminescence hidden by stormy clouds.<br ><br >
+        Thunder rumbled again, this time louder. Its doomful sound became one
+        with the night, inspiring fear in everything around. The katydids&#39;
+        incessant buzzing stopped abruptly. The barn owls took shelter under
+        their wings. All was quiet except for the murmur of the trees. Something
+        ominous was here, a baleful sense of fate perhaps, just waiting for the
+        right soul to wander in and meet its demise...
+        (<a href="Strange_Attraction.html">read more</a>)</p>
+      </div>
+       <div class="story" id="foodFreedom">
+         <a href="Food_Freedom.html"><span>Food Freedom</span></a><br>
+         <p>The marshmallow climbed out of his bag, turning the air around him sweet and delightful.<br>
+         "Oh my!" He exclaimed. "I must be brave in this new world."<br><br>
+         And so, he began exploring the kitchen. Strolling past a bag of little
+         chocolate chips, he gasped with surprise.<br>
+         "My, oh my," he thought. "Those poor little succulents, stuck in there..."<br>
+         Suddenly, a thought occurred to him! He shivered with a thrill of anticipation.
+         Unable to contain his excitement, he began wiggling all his parts and started doing jumping-jacks.<br>
+         "My, oh my, what an excellent idea," he thought to himself.<br><br>
+         And so, without further ado, he released the chocolate chips.<br>
+         Down and down they poured, out of the bag and all over the countertop,
+         their squeals of joy high-pitched and annoying.<br><br>
+
+         The marshmallow smiled and applauded himself for this act of justice.
+         Keeping food locked up in bags was foul, the epitome of injustice.<br>
+         Who would do such a thing?...
+         (<a href="Food_Freedom.html">read more</a>)</p>
+       </div>
+       <div class="story" id="chimneySweep">
+         <a href="The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
+         <p>The air was frigid, as was the chimney sweep's heart. Standing atop
+         mansions, cleaning the nobility's chimneys was cumbersome work.
+         Especially during the winter. His clothes were always soiled, smeared
+         with black soot. His face, normally pale as snow, took on the ashen hue
+         of someone who had already lost everything.<br><br>
+         He guessed he had. Standing this particular morning, on the Grand Duke's
+         chimney, he felt weary. The sun had not yet risen, and the air was cold.
+         This was his favorite time of day. Nobody else was awake, giving him time
+         to look up at the sky as dawn approached. He could see a faint glimmer of
+         stars, fading as the sun slowly started to rise...
+         (<a href="The_Chimney_Sweep.html">read more</a>)</p>
+       </div>
+       <div class="story" id="marigold">
+         <a href="Marigold.html"><span>Marigold</span></a><br>
+         <p>...this story has yet to be born...<br><br>
+           expected due date: May 16, 2019</p>
+         <!--(<a href="Marigold.html">read more</a>)</p>-->
+       </div>
+     </div>
+     <!-- ********* smallerStories ******** -->
+     <div class="smallerLinks">
+       <div>
+         <div class="smallerStory" id="strangeAttraction">
+          <a href="Strange_Attraction.html"><span>Strange Attraction</span></a><br>
+          <p>Thunder grumbled in the distance, its angry echoes reverberating over the
+          mountaintop and into the nearby valley. The forest below awoke from its
+          slumber at the sound. A shiver rolled through the trees, sending silent
+          whispers with the wind as leaves rustled about. It was 8:30 PM, and the
+          night was darker than usual. Much darker. Blackness cloaked everything,
+          pervaded everything, was everything. The moon was nowhere to be seen,
+          its luminescence hidden by stormy clouds.<br ><br >
+          Thunder rumbled again, this time louder. Its doomful sound became one
+          with the night, inspiring fear in everything around. The katydids&#39;
+          incessant buzzing stopped abruptly. The barn owls took shelter under
+          their wings. All was quiet except for the murmur of the trees. Something
+          ominous was here, a baleful sense of fate perhaps, just waiting for the
+          right soul to wander in and meet its demise...
+          (<a href="Strange_Attraction.html">read more</a>)</p>
+        </div>
+         <div class="smallerStory" id="foodFreedom">
+           <a href="Food_Freedom.html"><span>Food Freedom</span></a><br>
+           <p>The marshmallow climbed out of his bag, turning the air around him sweet and delightful.<br>
+           "Oh my!" He exclaimed. "I must be brave in this new world."<br><br>
+           And so, he began exploring the kitchen. Strolling past a bag of little
+           chocolate chips, he gasped with surprise.<br>
+           "My, oh my," he thought. "Those poor little succulents, stuck in there..."<br>
+           Suddenly, a thought occurred to him! He shivered with a thrill of anticipation.
+           Unable to contain his excitement, he began wiggling all his parts and started doing jumping-jacks.<br>
+           "My, oh my, what an excellent idea," he thought to himself.<br><br>
+           And so, without further ado, he released the chocolate chips.<br>
+           Down and down they poured, out of the bag and all over the countertop,
+           their squeals of joy high-pitched and annoying.<br><br>
+
+           The marshmallow smiled and applauded himself for this act of justice.
+           Keeping food locked up in bags was foul, the epitome of injustice.<br>
+           Who would do such a thing?...
+           (<a href="Food_Freedom.html">read more</a>)</p>
+         </div>
+         <div class="smallerStory" id="chimneySweep">
+           <a href="The_Chimney_Sweep.html"><span>The Chimney Sweep</span></a><br>
+           <p>The air was frigid, as was the chimney sweep's heart. Standing atop
+           mansions, cleaning the nobility's chimneys was cumbersome work.
+           Especially during the winter. His clothes were always soiled, smeared
+           with black soot. His face, normally pale as snow, took on the ashen hue
+           of someone who had already lost everything.<br><br>
+           He guessed he had. Standing this particular morning, on the Grand Duke's
+           chimney, he felt weary. The sun had not yet risen, and the air was cold.
+           This was his favorite time of day. Nobody else was awake, giving him time
+           to look up at the sky as dawn approached. He could see a faint glimmer of
+           stars, fading as the sun slowly started to rise...
+           (<a href="The_Chimney_Sweep.html">read more</a>)</p>
+         </div>
+       </div>
+       <div>
+         <div class="smallerStory" id="marigold">
+           <a href="Marigold.html"><span>Marigold</span></a><br>
+           <p>...this story has yet to be born...<br><br>
+             expected due date: May 16, 2019</p>
+           <!--(<a href="Marigold.html">read more</a>)</p>-->
+         </div>
+       </div>
+     </div> <!-- ******** ********* -->
+
+
+     <p class="scroll"><a href="#top" id="topperTop">[top]</a></p>
+     <p class="scroll"><a href="#smallerTop" id="hiddenTop">[top]</a></p>
+     <footer>
+       <div>
+         <span>@inkyfawn</span>
+         <p>Last Updated: January 3, 2019</p>
+         <a target="_blank" title="@inkyfawn" href="http://www.instagram.com/inkyfawn"><img alt="@inkyfawn" src="https://c866088.ssl.cf3.rackcdn.com/assets/instagram30x30.png" border=0></a>
+       </div>
+     </footer>
+   </body>
+</html>
